# GradWork

./: .gitignore  .gitmodules  Features_list.md  LICENSE  README.md
Firmware/: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  CMake_nRF5x.cmake  ap_application.cpp  ap_application.hpp  arm-gcc-toolchain.cmake  conanfile.txt  main.cpp
Firmware/Firmware/: CMakeLists.txt
Firmware/Firmware/sdk_dependent/board-pinout/: pca10040.h
Firmware/Firmware/sdk_dependent/config/: sdk_config.h
Firmware/Firmware/src/: .gitignore  CMakeLists.txt  CMakeLists1.txt  ap_application.cpp  ap_application.cpp.autosave  ap_application.hpp  main.cpp
Firmware/Firmware/src/cmake/: base.cmake
Firmware/Firmware/src/drivers/: CMakeLists.txt
Firmware/cmake/: FindNordicSDK.cmake  arm-gcc-toolchain.cmake  base.cmake  base_BACKUP_811.cmake  base_LOCAL_811.cmake  base_REMOTE_811.cmake
Firmware/cmake/freertos/: CMakeLists.txt
Firmware/cmake/jlink/: commandline.txt
Firmware/cmake/nordic/: CMakeLists.txt  base.cmake  nordic_postbuild.cmake  nrfsdk_utils.cmake  sdk.cmake
Firmware/coroutine_research/: display_transaction.cpp  freertos_example.cpp  main_example.cpp  simple_scheduler.cpp
Firmware/drivers/: CMakeLists.txt
Firmware/drivers/ble/: CMakeLists.txt  ble_battery_service.cpp  ble_custom_service.cpp  ble_datetime_service.cpp  ble_desktop_softdevice.cpp  ble_heartrate_service.cpp  ble_softdevice.cpp
Firmware/drivers/board/: CMakeLists.txt  watchboard.cpp
Firmware/drivers/buttons/: CMakeLists.txt  bt_buttons_driver.cpp  bt_buttons_driver_creator.cpp  bt_firmware_simulator_hardware_buttons_manual_backend.cpp  bt_nordic_hardware_backend.cpp  bt_os_stub_hardware_buttons_backend.cpp  bt_os_win32_hardware_buttons_manual_backend.cpp  bt_win32_hardware_buttons_manual_backend.cpp
Firmware/drivers/display/: CMakeLists.txt  display_coro_compact_gc9a01.cpp  display_coro_gc9a01.cpp  display_creator.cpp  display_gc9a01.cpp  display_st7789v.cpp  display_st7789v_constants.hpp
Firmware/drivers/factory_impl/: CMakeLists.txt  ble_services_stub.cpp  ble_services_stub.hpp  ih_ble_service_factory.cpp  ih_ible_softdevice.cpp
Firmware/drivers/gpio/: CMakeLists.txt  gpio_pin.cpp
Firmware/drivers/headers/: CMakeLists.txt
Firmware/drivers/i2c/: CMakeLists.txt  i2c_test.cpp
Firmware/drivers/platform_delay/: CMakeLists.txt  delay_provider.cpp
Firmware/drivers/spi/: CMakeLists.txt  spi_wrapper.cpp  spi_wrapper_async.cpp  spi_wrapper_stub.cpp
Firmware/drivers/winbondflash/: CMakeLists.txt  winbond_driver_creator.cpp  winbond_flash.cpp  winbond_flash.hpp
Firmware/filesystem/: CMakeLists.txt
Firmware/filesystem/filesystem/: filesystem_holder.hpp
Firmware/firmware_tests/: CMakeLists.txt  buttons_driver_test.cpp  buttons_fake_backends.hpp  buttons_fake_event_handler.hpp  buttons_fixture.hpp  clock_page_handler_fixture.hpp  clock_page_view_handler_test.cpp  clock_watch_fake_view.hpp  main.cpp
Firmware/firmware_tests/article_example/: CMakeLists.txt  coroutine_utils.hpp  display_common_coroutine.hpp  display_gc9a01.hpp  gpio.hpp  root.cpp  spi_desktop_backend.hpp  spi_driver_high_level.hpp
Firmware/firmware_tests/buttons_driver/: buttons_driver_test.cpp  buttons_fake_backends.hpp  buttons_fake_event_handler.hpp  buttons_fixture.hpp
Firmware/firmware_tests/clock_page_handler/: clock_page_handler_fixture.hpp  clock_page_view_handler_test.cpp  clock_watch_fake_view.hpp
Firmware/firmware_tests/coroutine/: CMakeLists.txt  coroutine_thoughts.cpp  display_peripheral_test.cpp  st7789_draft.hpp  thoughts.hpp
Firmware/firmware_tests/filesystem/: filesystem_fixture.hpp  filesystem_in_memory_test.cpp  filesystem_test_data.hpp
Firmware/firmware_tests/main_window/: mainwindow_fakes.hpp  mainwindow_fixture.hpp  mainwindow_model_test.cpp
Firmware/firmware_tests/stubs/: base_mocked_page.hpp  base_stub_widget.hpp  pages_stub_pages_creator.cpp  pages_stub_pages_creator.hpp  widgets_stub_pages_creator.cpp  widgets_stub_pages_creator.hpp
Firmware/firmware_tests/testing_common/: CMakeLists.txt
Firmware/freertos_config/: FreeRTOSConfig.h
Firmware/graphics/: CMakeLists.txt  gs_event_dispatcher.cpp  gs_event_dispatcher.hpp  gs_lvgl_service.cpp  gs_lvgl_service.hpp  gs_theme_controller.cpp  gs_theme_controller.hpp
Firmware/graphics/fonts/: CMakeLists.txt  IconFont16px.cpp  IconFont24px.cpp  IconFont24px.hpp  IconFont35px.cpp  LcdNova12px.cpp  LcdNova16px.cpp  LcdNova24px.cpp  LcdNova30px.cpp  LcdNova36px.cpp  LcdNova68px.cpp  PlayerIcons68px.cpp  PlayerIcons68px.hpp
Firmware/graphics/ih/: gs_events.hpp  gs_ievent_handler.hpp  gs_imain_window.hpp  gs_ipage_view_object.hpp  gs_itheme_controller.hpp  gs_iwidget_object.hpp
Firmware/graphics/lvgl_lib/: CMakeLists.txt  GenerateCFilesList.txt
Firmware/graphics/platform/: CMakeLists.txt  gs_platform_layer.cpp  gs_platform_layer.hpp
Firmware/graphics/widgets_layer/: gs_event_handler_base.hpp  gs_main_window.cpp  gs_main_window.hpp  gs_main_window_event_handler.cpp  gs_main_window_event_handler.hpp  gs_main_window_view.cpp  gs_main_window_view.hpp  gs_page_view_object.cpp  gs_page_view_object.hpp  lvgl_ui.cpp  lvgl_ui.hpp
Firmware/logger/: CMakeLists.txt  logger_service_impl.cpp
Firmware/nrf52_e73mod_cmake/: CMake_nRF5x.cmake  arm-gcc-toolchain.cmake
Firmware/nrf52_e73mod_cmake/Firmware/: CMakeLists.txt
Firmware/nrf52_e73mod_cmake/example/: .gitignore  CMakeLists.txt
Firmware/old_toolchain_files/: CMakeListsOld.txt  CMakeListsOldRoot.txt  CMakeListsSumlatorOld.txt
Firmware/sdk_dependent/: gcc_nrf52.ld
Firmware/sdk_dependent/board-pinout/: pca10040.h
Firmware/sdk_dependent/config/: sdk_config.h
Firmware/service_providers/: CMakeLists.txt
Firmware/service_providers/headers/: CMakeLists.txt
Firmware/service_providers/watch_fake_services/: CMakeLists.txt  sp_fake_services_creator.cpp
Firmware/test/: CMakeLists.txt  main.c  main.cpp
Firmware/utils/: CMakeLists.txt  etl_profile.h
Simulator/: .gitignore  CMakeLists.txt
Simulator/graphics/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h
Simulator/src/: main.cpp
(+384 files in other folders)
